# CW_5

./: README.md  pyproject.toml
data/: hh_data.json
src/: abstract_head_hunter_api.py  abstract_json_saver.py  abstract_vacancy.py  database.ini  db_manager.py  employer.py  head_hunter_api.py  json_saver.py  main.py  vacancy.py
tests/: test_head_hunter_api.py  test_json_saver.py  test_vacancy.py
