[tool.poetry]
name = "kw-4"
version = "0.1.0"
description = "KW_4"
authors = ["finka759 <finka759@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
